<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mulish"
        android:textSize="24dp"
        android:textColor="@color/black"
        android:layout_marginBottom="12dp"
        android:textStyle="bold"
        android:text="@string/brief" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter"
            android:inputType="text"
            android:fontFamily="@font/mulish"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@drawable/edittext_background"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:drawablePadding="8dp"
            android:backgroundTint="#EBECEE"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mulish"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/rounded_button"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp" />

</LinearLayout>
